--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fideloper/proxy": "^4.0",
         "illuminate/html": "5.*",
         "laravel/framework": "5.8.*",
+        "laravel/passport": "^7.5",
         "laravel/tinker": "^1.0",
         "pusher/pusher-php-server": "^4.0"
     },
